[gd_scene load_steps=17 format=2]

[ext_resource path="res://Ui/victory.gd" type="Script" id=1]
[ext_resource path="res://exports card/ui-02.png" type="Texture" id=2]
[ext_resource path="res://Ui/Back to Main Menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Ui/mouse/mouse.tscn" type="PackedScene" id=4]
[ext_resource path="res://Ui/Languages.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Mesh-Library/objects.tres" type="MeshLibrary" id=6]
[ext_resource path="res://Assets/Mesh-Library/tiles.tres" type="MeshLibrary" id=7]
[ext_resource path="res://lighting/Luz.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scene Root 3D.tscn" type="PackedScene" id=9]
[ext_resource path="res://sound/sfx-ogg/Calm_Waters.ogg" type="AudioStream" id=10]
[ext_resource path="res://Ui/Language.tscn" type="PackedScene" id=11]
[ext_resource path="res://exports card/ui-06.png" type="Texture" id=12]
[ext_resource path="res://exports card/ui-05.png" type="Texture" id=13]
[ext_resource path="res://exports card/ui-05 - Copia.png" type="Texture" id=14]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.298039, 0.298039, 0.298039, 1 )
ambient_light_color = Color( 0.294118, 0.282353, 0.501961, 1 )
ambient_light_energy = 0.2

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Scene Root:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -0.893176, 1.49336, 8.87633 ), Vector3( -0.893176, -1.55516, 8.87633 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Scene Root:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -23.1895, 0, 0 ), Vector3( -81.5282, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[node name="Control3" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="icon" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.392157 )
position = Vector2( 523.425, 306.078 )
scale = Vector2( 1.27921, 0.647626 )
texture = ExtResource( 2 )

[node name="Back to Main Menu" parent="." instance=ExtResource( 3 )]
margin_left = 425.853
margin_top = 480.56
margin_right = 672.853
margin_bottom = 580.56

[node name="Label" type="Label" parent="."]
margin_left = 125.263
margin_top = 205.263
margin_right = 932.263
margin_bottom = 518.263
text = "The city shines in front of them. The ocean is peaceful, the breeze smells like hope. They taste freedom as their feet finally touches the ground. Some refugees screams, others dance. There are people singing, praying, laughing, hugging each other. Each one has its own way of celebrating. Apué is where their new life will begin. Although they might still find danger and suffering in their path inside a new country, far away from family and friends, crossing the ocean was already an incredible victory!
La ville brille devant eux. L'océan est paisible, la brise sent l'espoir. Ils goûtent la liberté quand leurs pieds touchent enfin le sol. Certains réfugiés hurlent, d'autres dansent. Il y a des gens qui chantent, prient, rient, s'embrassent. Chacun a sa propre façon de célébrer. C'est à Apué que leur nouvelle vie va commencer. Même s'ils risquent encore de rencontrer des dangers et des souffrances sur leur route à l'intérieur d'un nouveau pays, loin de leur famille et de leurs amis, traverser l'océan était déjà une incroyable victoire!"
autowrap = true

[node name="mouse" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 0 )

[node name="Languages" parent="." instance=ExtResource( 5 )]

[node name="Control" type="Spatial" parent="."]
editor/display_folded = true

[node name="GridMap2" type="GridMap" parent="Control"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )
mesh_library = ExtResource( 6 )
cell_size = Vector3( 0.5, 0.4, 0.5 )
data = {
"cells": PoolIntArray( 131083, 2, 536870914, 131085, 4, 5, 131087, 8, 5, 131088, 11, 2, 7, 18, 655361, 65545, 25, 5, 65542, 26, 1, 65543, 29, 5 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 2, 0 )
}

[node name="GridMap" type="GridMap" parent="Control"]
mesh_library = ExtResource( 7 )
cell_size = Vector3( 0.865, 0.4, 0.75 )
data = {
"cells": PoolIntArray( 1, 1, 4, 65527, 1, 4, 65529, 1, 536870916, 65531, 1, 4, 65533, 1, 4, 65535, 1, 4, 65539, 1, 1, 65541, 1, 1, 65543, 1, 0, 65545, 1, 0, 65547, 1, 0, 0, 3, 4, 2, 3, 4, 4, 3, 1, 65528, 3, 4, 65530, 3, 4, 65532, 3, 4, 65534, 3, 4, 65542, 3, 536870913, 65544, 3, 0, 65546, 3, 0, 1, 5, 4, 3, 5, 4, 5, 5, 1, 65527, 5, 4, 65529, 5, 4, 65531, 5, 4, 65533, 5, 4, 65535, 5, 4, 65543, 5, 1, 65545, 5, 0, 65547, 5, 0, 0, 7, 4, 2, 7, 4, 4, 7, 1, 6, 7, 1, 65528, 7, 4, 65530, 7, 4, 65532, 7, 4, 65534, 7, 4, 65544, 7, 1, 65546, 7, 0, 1, 9, 4, 3, 9, 4, 5, 9, 1, 65527, 9, 4, 65529, 9, 4, 65531, 9, 4, 65533, 9, 4, 65535, 9, 4, 65543, 9, 536870913, 65545, 9, 1, 65547, 9, 0, 0, 11, 4, 2, 11, 4, 4, 11, 1, 65528, 11, 4, 65530, 11, 4, 65532, 11, 4, 65534, 11, 4, 65542, 11, 1, 65544, 11, 1, 65546, 11, 0, 1, 13, 4, 3, 13, 1, 65527, 13, 4, 65529, 13, 4, 65531, 13, 4, 65533, 13, 4, 65535, 13, 4, 65541, 13, 1, 65543, 13, 1, 65545, 13, 0, 65547, 13, 0, 0, 15, 4, 2, 15, 4, 65528, 15, 4, 65530, 15, 4, 65532, 15, 4, 65534, 15, 4, 65540, 15, 2, 65542, 15, 2, 65544, 15, 0, 65546, 15, 0, 1, 17, 4, 65527, 17, 4, 65529, 17, 4, 65531, 17, 4, 65533, 17, 4, 65535, 17, 4, 65539, 17, 0, 65541, 17, 0, 65543, 17, 0, 65545, 17, 0, 65547, 17, 0, 0, 19, 4, 65528, 19, 4, 65530, 19, 4, 65532, 19, 4, 65534, 19, 4, 65538, 19, 0, 65540, 19, 0, 65542, 19, 0, 65544, 19, 0, 65546, 19, 0, 65527, 21, 4, 65529, 21, 4, 65531, 21, 4, 65533, 21, 4, 65535, 21, 4, 65537, 21, 0, 65539, 21, 0, 65541, 21, 0, 65543, 21, 0, 65545, 21, 0, 65547, 21, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 1, 0 )
}

[node name="Luz" parent="Control" instance=ExtResource( 8 )]
transform = Transform( 3.41145e-008, 0.642788, -0.766044, -2.86255e-008, 0.766044, 0.642788, 1, -9.99331e-017, 4.45334e-008, -8.99604, 10.0157, 8.46589 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="Control"]
environment = SubResource( 1 )

[node name="Scene Root" parent="Control" instance=ExtResource( 9 )]
transform = Transform( 0.50744, -0.0203233, 0.861448, 0, 0.999722, 0.0235855, -0.861687, -0.0119682, 0.507299, -0.893176, 1.49336, 8.87633 )

[node name="Camera" type="Camera" parent="Control"]
transform = Transform( 3.41145e-008, 0.642788, -0.766044, -2.86255e-008, 0.766044, 0.642788, 1, 1.77636e-015, 4.45333e-008, -8.99604, 10.0157, 8.46589 )
projection = 1
current = true
size = 8.14616

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
"anims/New Anim" = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource( 10 )
autoplay = true

[node name="Language2" parent="." instance=ExtResource( 11 )]
margin_left = 711.0
margin_top = 38.0
margin_right = 857.997
margin_bottom = 144.0
texture_pressed = ExtResource( 12 )

[node name="Language3" parent="." instance=ExtResource( 11 )]
margin_left = 601.643
margin_top = 38.0
margin_right = 748.64
margin_bottom = 144.0
texture_normal = ExtResource( 13 )

[node name="Language4" parent="." instance=ExtResource( 11 )]
margin_left = 821.0
margin_top = 38.0
margin_right = 967.997
margin_bottom = 144.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 14 )

[connection signal="button_down" from="Language2" to="." method="_on_Language2_button_down"]
[connection signal="button_down" from="Language3" to="." method="_on_Language3_button_down"]
[connection signal="button_down" from="Language4" to="." method="_on_Language4_button_down"]
